[gd_scene load_steps=36 format=2]

[ext_resource path="res://scenes/Parallax.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Transition.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Kenney Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/boxs/titlescreen2.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/titlescreen/nivel1/atencion-basic.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/titlescreen/nivel1/atencion-press.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/titlescreen/main/creditos-press.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/discriminacion/duracion-basic.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/titlescreen/nivel1/memoria-press.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/titlescreen/main/creditos-basic.png" type="Texture" id=10]
[ext_resource path="res://assets/buttons/titlescreen/nivel1/memoria-basic.png" type="Texture" id=11]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/regresar-basic.png" type="Texture" id=12]
[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=13]
[ext_resource path="res://scripts/ColorRect.gd" type="Script" id=14]
[ext_resource path="res://assets/buttons/titlescreen/main/nivel1-press.png" type="Texture" id=15]
[ext_resource path="res://assets/buttons/titlescreen/main/nivel1-basic.png" type="Texture" id=16]
[ext_resource path="res://assets/buttons/titlescreen/main/nivel2-basic.png" type="Texture" id=17]
[ext_resource path="res://assets/buttons/titlescreen/main/nivel2-press.png" type="Texture" id=18]
[ext_resource path="res://assets/buttons/titlescreen/nivel1/regresar-press.png" type="Texture" id=19]
[ext_resource path="res://assets/buttons/titlescreen/nivel1/regresar-basic.png" type="Texture" id=20]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/atencion-basic.png" type="Texture" id=21]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/memoria-press.png" type="Texture" id=22]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/discriminacion-press.png" type="Texture" id=23]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/discriminacion-basic.png" type="Texture" id=24]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/discriminacion/intensidad-basic.png" type="Texture" id=25]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/atencion-press.png" type="Texture" id=26]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/memoria-basic.png" type="Texture" id=27]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/discriminacion/regresar-basic.png" type="Texture" id=28]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/discriminacion/intensidad-press.png" type="Texture" id=29]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/discriminacion/duracion-press.png" type="Texture" id=30]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/regresar-press.png" type="Texture" id=31]
[ext_resource path="res://assets/buttons/titlescreen/nivel2/discriminacion/regresar-press.png" type="Texture" id=32]

[sub_resource type="DynamicFont" id=1]
size = 50
extra_spacing_space = 5
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "In"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.356863, 0.196078, 0.266667, 0 ), Color( 0.356863, 0.196078, 0.266667, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.356863, 0.196078, 0.266667, 1 ), Color( 0.356863, 0.196078, 0.266667, 0 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parallax" parent="." instance=ExtResource( 1 )]

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 1040, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin1" type="MarginContainer" parent="VBox"]
margin_right = 1040.0
margin_bottom = 180.0
rect_min_size = Vector2( 1040, 180 )

[node name="Title" type="Label" parent="VBox/Margin1"]
margin_left = 98.0
margin_top = 52.0
margin_right = 941.0
margin_bottom = 128.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.85098, 0.282353, 1 )
custom_colors/font_color_shadow = Color( 0.607843, 0.482353, 0.00784314, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "HABILIDADES BASICAS"
align = 1
valign = 1

[node name="Margin2" type="MarginContainer" parent="VBox"]
margin_top = 184.0
margin_right = 1040.0
margin_bottom = 776.0
rect_min_size = Vector2( 1040, 0 )

[node name="Background" type="TextureRect" parent="VBox/Margin2"]
margin_left = 235.0
margin_right = 805.0
margin_bottom = 592.0
rect_min_size = Vector2( 570, 592 )
size_flags_horizontal = 4
texture = ExtResource( 4 )

[node name="VBox" type="VBoxContainer" parent="VBox/Margin2"]
margin_left = 295.0
margin_top = 61.0
margin_right = 745.0
margin_bottom = 531.0
rect_min_size = Vector2( 450, 470 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Margin1" type="MarginContainer" parent="VBox/Margin2/VBox"]
margin_right = 450.0
margin_bottom = 85.0
rect_min_size = Vector2( 450, 85 )

[node name="Nivel1" type="TextureButton" parent="VBox/Margin2/VBox/Margin1"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )
expand = true
stretch_mode = 3

[node name="Atencion1" type="TextureButton" parent="VBox/Margin2/VBox/Margin1"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="Atencion2" type="TextureButton" parent="VBox/Margin2/VBox/Margin1"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 26 )
expand = true
stretch_mode = 3

[node name="Intensidad" type="TextureButton" parent="VBox/Margin2/VBox/Margin1"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 29 )
expand = true
stretch_mode = 3

[node name="Margin2" type="MarginContainer" parent="VBox/Margin2/VBox"]
margin_top = 89.0
margin_right = 450.0
margin_bottom = 174.0
rect_min_size = Vector2( 450, 85 )

[node name="Nivel2" type="TextureButton" parent="VBox/Margin2/VBox/Margin2"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
expand = true
stretch_mode = 3

[node name="Memoria1" type="TextureButton" parent="VBox/Margin2/VBox/Margin2"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 3

[node name="Memoria2" type="TextureButton" parent="VBox/Margin2/VBox/Margin2"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 22 )
expand = true
stretch_mode = 3

[node name="Duracion" type="TextureButton" parent="VBox/Margin2/VBox/Margin2"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 30 )
expand = true
stretch_mode = 3

[node name="Margin3" type="MarginContainer" parent="VBox/Margin2/VBox"]
margin_top = 178.0
margin_right = 450.0
margin_bottom = 263.0
rect_min_size = Vector2( 450, 85 )

[node name="Discriminacion1" type="TextureButton" parent="VBox/Margin2/VBox/Margin3"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 23 )
expand = true
stretch_mode = 3

[node name="Discriminacion2" type="TextureButton" parent="VBox/Margin2/VBox/Margin3"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 23 )
expand = true
stretch_mode = 3

[node name="Margin4" type="MarginContainer" parent="VBox/Margin2/VBox"]
margin_top = 267.0
margin_right = 450.0
margin_bottom = 352.0
rect_min_size = Vector2( 450, 85 )

[node name="Credits" type="TextureButton" parent="VBox/Margin2/VBox/Margin4"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 3

[node name="Regresar1" type="TextureButton" parent="VBox/Margin2/VBox/Margin4"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 19 )
expand = true
stretch_mode = 3

[node name="Regresar2" type="TextureButton" parent="VBox/Margin2/VBox/Margin4"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 31 )
expand = true
stretch_mode = 3

[node name="Regresar2_1" type="TextureButton" parent="VBox/Margin2/VBox/Margin4"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 32 )
expand = true
stretch_mode = 3

[node name="Regresar2_2" type="TextureButton" parent="VBox/Margin2/VBox/Margin4"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 32 )
expand = true
stretch_mode = 3

[node name="Regresar2_3" type="TextureButton" parent="VBox/Margin2/VBox/Margin4"]
margin_top = 14.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 32 )
expand = true
stretch_mode = 3

[node name="Transition" parent="." instance=ExtResource( 2 )]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 414.0
margin_top = 246.0
margin_right = 866.0
margin_bottom = 606.0
color = Color( 0.356863, 0.196078, 0.266667, 0 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/In = SubResource( 5 )
anims/Out = SubResource( 6 )
[connection signal="pressed" from="VBox/Margin2/VBox/Margin1/Nivel1" to="." method="_on_Nivel1_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin1/Atencion1" to="." method="_on_Atencion1_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin1/Atencion2" to="." method="_on_Atencion2_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin1/Intensidad" to="." method="_on_Intensidad_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin2/Nivel2" to="." method="_on_Nivel2_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin2/Memoria1" to="." method="_on_Memoria1_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin2/Memoria2" to="." method="_on_Memoria2_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin2/Duracion" to="." method="_on_Duracion_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin3/Discriminacion1" to="." method="_on_Discriminacion1_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin3/Discriminacion2" to="." method="_on_Discriminacion2_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin4/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin4/Regresar1" to="." method="_on_Regresar1_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin4/Regresar2" to="." method="_on_Regresar2_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin4/Regresar2_1" to="." method="_on_Regresar2_1_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin4/Regresar2_2" to="." method="_on_Regresar2_2_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBox/Margin4/Regresar2_3" to="." method="_on_Regresar2_3_pressed"]
